# taura-sim

install/: local_setup.sh  setup.sh
log/: latest_build
src/meus_modelos/models/aruco_marker/: gerar_marcador_aruco.py  model.config  model.sdf
src/meus_modelos/models/aruco_marker/materials/scripts/: aruco.material
src/sim_aruco_pkg/: CMakeLists.txt  package.xml
src/sim_aruco_pkg/launch/: simulation_launch.py
src/sim_aruco_pkg/scripts/: auto_pouso_node.py
src/sim_aruco_pkg/worlds/: landing_aruco.world
