<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>taura_sim_pkg</name>
  <version>0.0.1</version>
  <description>Pacote para a simulação do drone Taura com detecção de ArUco.</description>
  <maintainer email="angela.mahlke@acad.ufsm.br">Angela Mahlke</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>mavros_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>